--- a/styles/style.css
+++ b/styles/style.css
@@ -56,26 +56,27 @@ ul {
 .main-bar {
     width: 500px;
     display: inline-block;
-    /* padding-right: 250px; */
+    padding: 16px;
     padding-left: 375px;
     top: 355px;
     left: 575px;
 }
 
 .search-bar {
-    margin-top: 0;
-    height: 50px;
+    position: relative;
+    height: 20px;
     width: 550px;
     border-radius: 25px;
     border: 2px solid rgb(211, 210, 209);
-    padding: 20px;
+    padding: 25px;
 }
 
-#icon {
-    background-image: white url(../images/search.png) no-repeat;
-    background-position: 2px 3px;
-    /* background-color: rgb(160, 139, 22); */
-    /* padding-left: 17px; */
+.main-bar i {
+    position: absolute;
+    left: 400px;
+    top: 300px;
+    size: 1.33em;
+    /* color: gray; */
 }
 
 center {
@@ -94,4 +95,18 @@ input.valid {
     background-repeat: no-repeat;
     background-size: 20px 20px;
     background-position: right center;
+}
+
+button {
+    display: inline-block;
+    border: none;
+    padding: 1rem 2rem;
+    margin: 0;
+    text-decoration: none;
+    background: #edeff1;
+    color: #0a0a0a;
+    font-family: sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
 }
